<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutAdd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragments.AddFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAddTaskTitle"
        style="@style/AppTheme.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_string_title"
        app:layout_constraintEnd_toStartOf="@id/guideLineAddEnd"
        app:layout_constraintStart_toEndOf="@id/guideLineAddStart"
        app:layout_constraintTop_toBottomOf="@id/guideLineAddTop">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextAddTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAddTaskDescription"
        style="@style/AppTheme.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_dimen_mdpi"
        android:hint="@string/text_string_description"
        app:layout_constraintEnd_toStartOf="@id/guideLineAddEnd"
        app:layout_constraintStart_toEndOf="@id/guideLineAddStart"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddTaskTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextAddTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAddTaskAdd"
        style="@style/AppTheme.Button.Dark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_dimen_xhdpi"
        android:text="@string/text_string_add"
        app:layout_constraintBottom_toTopOf="@id/guideLineAddBottom"
        app:layout_constraintEnd_toStartOf="@id/guideLineAddEnd"
        app:layout_constraintStart_toEndOf="@id/guideLineAddStart"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddTaskDescription"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineAddStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineAddEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineAddTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineAddBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>